add BETA tag to RN v13.3.0

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -5,6 +5,18 @@ sidebar_label: v13.3.0 - Fall Release
 image: "img/release-note-link-preview.png"
 ---
 
+export const Highlight = ({children, color}) => (
+  <span
+    style={{
+      backgroundColor: color,
+      borderRadius: '8px',
+      color: '#131111',
+      padding: '0.3rem',
+    }}>
+    {children}
+  </span>
+);
+
 _October 24th, 2024_
 
 :::info
@@ -47,7 +59,7 @@ This will allow you to be notified and keep your resources updated easily and fr
 
 We have enhanced our Platforge extensibility kit by adding external links among the supported extensions. You can now add this type of link in the sidebar from the Extension Manager in Console.
 
-### Extend Mia-Platform Console pages using Microfrontend Composer (BETA)
+### Extend Mia-Platform Console pages using Microfrontend Composer | <Highlight color="#e5c762">BETA</Highlight>
 
 With a view to further enhancing our Platforge toolkit dedicated to Console extensibility, we also introduced the possibility of composing Console pages using the Microfrontend Composer. 
 To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customising the new section you want to add!
