Apply suggestions from code review
fix copies

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -62,7 +62,8 @@ We have enhanced our Platforge extensibility kit by adding external links among 
 ### Extend Mia-Platform Console pages using Microfrontend Composer | <Highlight color="#e5c762">BETA</Highlight>
 
 With a view to further enhancing our Platforge toolkit dedicated to Console extensibility, we also introduced the possibility of composing Console pages using the Microfrontend Composer. 
-To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customising the new section you want to add!
+To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customizing the new section you want to add!
+
 
 Please note that this feature has now been released in Beta.
 
