--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -89,7 +89,7 @@ To discover more, please refer to the [documentation page](/console/design-your-
 
 #### Support of Kubernetes Resources in Runtime area | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
-We finalised the support for Kubernetes type Resources by introducing the possibility of monitoring such resources at Runtime once deployed.  
+We finalized the support for Kubernetes type Resources by introducing the possibility of monitoring such resources at Runtime once deployed.  
 For each resource you will be able to access its detail where you will see the respective Describe and Events that are generated, similarly to the other resources in the Runtime Area.
 
 To discover more, you can refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
