Mia Care marketplace updates

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -64,7 +64,6 @@ We have enhanced our Platforge extensibility kit by adding external links among 
 With a view to further enhancing our Platforge toolkit dedicated to Console extensibility, we also introduced the possibility of composing Console pages using the Microfrontend Composer. 
 To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customizing the new section you want to add!
 
-
 Please note that this feature has now been released in Beta.
 
 ### Improvements
@@ -112,6 +111,35 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 It is now possible to add new key `$dateNow` in handlebars to retrieve current date time in ISO format in http requests.
 
 ## Marketplace
+
+### Marketplace Updates
+
+#### Teleconsultation Service
+
+A new major version of the Teleconsultation Service - both frontend and backend - is out!
+
+The Teleconsultation Service `v2.0.0` is officially available from October 1st, 2024 and supports the new version of the Kaleyra API (v2).
+
+The end of life for Kaleyra API v1 is October 31st, 2024, so after that date all `v1.x.x` versions will stop working.
+
+#### Breaking Changes
+
+- If no company theme or logo is specified in the service configuration, no default is set and therefore no update is performed when service starts
+- Endpoint `POST /teleconsultation/:roomId/participants/data` has been deleted
+
+#### Appointment Manager
+
+The new version `2.5.0` of the Appointment Manager is available!
+
+In this minor version we have resolved an issue where an availability slot was incorrectly blocked if it started immediately after an exception period. Previously, if the start time of the next available slot matched the end time of the exception, the system would erroneously block that slot, even though it was intended to be available. This has now been fixed, and availability will be correctly displayed in such cases.
+
+The fix automatically truncates start and end date to the second, so, if you are encoutering this issue, please update the affected exceptions after upgrading to `v2.5.0`.
+
+#### Form Service BE
+
+The new version `2.1.0` of the Form Service Backend is available!
+
+In this minor version, we’ve added a new feature to the `FormModal` component. Now, the title can be passed as a prop, just like the message. This update offers greater flexibility for customizing modal titles based on specific needs. Moreover, we upgraded some dependencies, including Node.js to v20 and the `custom-plugin-lib` to v6.
 
 ## How to update your Console
 
