--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -122,7 +122,7 @@ The Teleconsultation Service `v2.0.0` is officially available from October 1st, 
 
 The end of life for Kaleyra API v1 is October 31st, 2024, so after that date all `v1.x.x` versions will stop working.
 
-#### Breaking Changes
+##### Breaking Changes
 
 - If no company theme or logo is specified in the service configuration, no default is set and therefore no update is performed when service starts
 - Endpoint `POST /teleconsultation/:roomId/participants/data` has been deleted
