--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -200,9 +200,12 @@ The main benefits for the user can be summarized by the following:
 - Action Advisory
 - Simplify access to features
 
-Let's go in deep with the new Features:
+### AI RAG Chat application | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
-### Mia-Assistant
+In this release, we have worked on an application to extend the use of AI assistance with the process of Retrieved Augmented Generation (RAG) in a simple way. You can then configure a RAG Application chat within your project to easily set up your own chatbot. This application is featuring automatic embeddings generation from website pages.  
+For more information on how to configure your custom RAG Application, head to the [related tutorial](/marketplace/tutorials/create-a-rag-application.md).
+
+### Let's welcome Mia-Assistant in Console!
 
 With this release we introduce a first version of our **Mia-Assistant**, an AI-based virtual chat that will make it easier for you to discover our Mia-Platform Console and access its documentation!
 Mia-Assistant will answer your questions and provide you the related Mia-Platform documentation reference, to help you retrieve all the information you need and improve your experience with our product!
