add composability RN

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -32,6 +32,12 @@ For each resource you will be able to access its detail where you will see the r
 
 To discover more, please refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
 
+### Introducing the Mia-Platform Software Catalog
+
+The Mia-Platform Software Catalog offers a centralized solution for tracking, managing, and documenting software resources across the company. It provides visibility into software ownership, metadata, lifecycle status, and versions, helping teams ensure accountability and avoid duplication of efforts.
+
+For more information and to see the currently supported resources, please refer to the [documentation](/software-catalog/overview.md) for detailed insights on the Software Catalog.
+
 ### View version updates of Marketplace resources in your configuration
 
 From this release, you will be able to see, within your configuration, your Marketplace resources that have a new version update available.  
@@ -47,6 +53,12 @@ With a view to further enhancing our Platforge toolkit dedicated to Console exte
 To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customising the new section you want to add!
 
 Please note that this feature has now been released in Beta.
+
+### Improvements
+
+#### New Flow Manager Configurator look
+
+We’ve refreshed the look of the Flow Manager Configurator with updated graphics, new colors, and several design improvements to enhance the overall user experience and visual appeal.
 
 ### Bug Fix
 
@@ -73,6 +85,18 @@ The new version `1.3.2` of the Projection Storer service is available!
 ## Data Catalog
 
 ## Microfrontend Composer
+
+### Back-Kit Library
+
+The new version `v1.5.9` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
+#### Improvements
+
+##### New keyword to get the current time
+
+It is now possible to add new key `$dateNow` in handlebars to retrieve current date time in ISO format in http requests.
 
 ## Marketplace
 
