--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -80,6 +80,8 @@ You can find the brand new plugin in the [Backstage Marketplace](https://backsta
 
 You can now manage and configure custom objects that are not part of the standard Console supported resources using the classic user interface of the Console. This feature further expands the Console domain over user's entire workloads, enabling greater operability, governance, and control over systems.
 
+![Custom Resources](img/infrastructure-resources.png)
+
 #### Support to all Infrastructure Resources | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 With this Fall release we have officially introduced the possibility to manage the provisioning of your infrastructure, configuring - at the Design level - your Infrastructure Resources.  
@@ -87,14 +89,12 @@ Within the Design of your Console you can then see a new "Infrastructure" sectio
 
 To discover more, please refer to the [documentation page](/console/design-your-projects/custom-resources/custom-resources.md) and check out some useful [use cases](/console/design-your-projects/custom-resources/use-cases.md).
 
-#### Support of Kubernetes Resources in Runtime area | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
+#### Support of Custom Kubernetes Resources in Runtime area | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
 We finalized the support for Kubernetes type Resources by introducing the possibility of monitoring such resources at Runtime once deployed.  
 For each resource you will be able to access its detail where you will see the respective Describe and Events that are generated, similarly to the other resources in the Runtime Area.
 
 To discover more, you can refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
-
-![Custom Resources](img/infrastructure-resources.png)
 
 ## Simplify Composability
 
