--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -202,7 +202,7 @@ The main benefits for the user can be summarized by the following:
 
 ### AI RAG Chat application | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
-In this release, we have worked on an application to extend the use of AI assistance with the process of Retrieved Augmented Generation (RAG) in a simple way. You can then configure a RAG Application chat within your project to easily set up your own chatbot. This application is featuring automatic embeddings generation from website pages.  
+In this release, we have worked on an application to extend the use of AI assistance with the process of Retrieval-Augmented Generation (RAG) in a simple way. You can then configure a RAG Application chat within your project to easily set up your own chatbot. This application is featuring automatic embeddings generation from website pages.  
 For more information on how to configure your custom RAG Application, head to the [related tutorial](/marketplace/tutorials/create-a-rag-application.md).
 
 ### Let's welcome Mia-Assistant in Console!
