--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -29,14 +29,14 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Console
 
-### Support to all infrastructure Resources in Design
+### Support to all Infrastructure Resources in Design
 
 With this release, we are excited to introduce the ability to manage infrastructure provisioning by configuring your Infrastructure Resources at the Design level.
 A new "Infrastructure" section has been added within the Design of your Console, fully dedicated to Infrastructure as Code!
 
 For more information, please visit the [documentation page](/console/design-your-projects/custom-resources/custom-resources.md) and explore some helpful [use cases](/console/design-your-projects/custom-resources/use-cases.md).
 
-### Support to Kubernetes Resources in the Runtime area 
+### Support to Infrastructure Kubernetes Resources in the Runtime area 
 
 With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
 
@@ -59,14 +59,24 @@ This will allow you to be notified and keep your resources updated easily and fr
 
 We have enhanced our Platforge extensibility kit by adding external links among the supported extensions. You can now add this type of link in the sidebar from the Extension Manager in Console.
 
+For more information about Console Extensions, please visit the related [documentation page](/console/company-configuration/extensions.md).
+
 ### Extend Mia-Platform Console pages using Microfrontend Composer | <Highlight color="#e5c762">BETA</Highlight>
 
 With a view to further enhancing our Platforge toolkit dedicated to Console extensibility, we also introduced the possibility of composing Console pages using the Microfrontend Composer. 
 To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customizing the new section you want to add!
 
-Please note that this feature has now been released in Beta.
+Please note that this feature has now been released in Beta. To discover more, refer to the [Extensions documentation](/console/company-configuration/extensions.md).
+
+### Support for Repository Creation in Infrastructure Resources
+
+For Infrastructure Resources that have an associated repository defined in their template, the Console now fully supports the repository creation step.
 
 ### Improvements
+
+#### Annotations & Labels Suggestions
+
+The Console now suggests previously used Annotations & Labels when adding them to a Microservice, speeding up the process and reducing the chance of errors.
 
 #### New Flow Manager Configurator look
 
@@ -76,7 +86,7 @@ We’ve refreshed the look of the Flow Manager Configurator with updated graphic
 
 This version addressed the following bugs:
 
-* 
+* We fixed a bug where the Design configuration wasn't displayed correctly if saved via shortcut before fully loading
 * 
 * 
 
