--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -55,6 +55,8 @@ For more information and to see the currently supported resources, please refer 
 From this release, you will be able to see, within your configuration, your Marketplace resources that have a new version update available.  
 This will allow you to be notified and keep your resources updated easily and frictionlessly!
 
+![Marketplace Updates](img/marketplace-updates.png)
+
 ### Add External Links in Console with the Extensibility manager
 
 We have enhanced our Platforge extensibility kit by adding external links among the supported extensions. You can now add this type of link in the sidebar from the Extension Manager in Console.
