--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -106,6 +106,17 @@ The new version `1.3.2` of the Projection Storer service is available!
 
 ## Data Catalog
 
+### Data Catalog Application
+
+The services of [Data Catalog Application](/data_catalog/data_catalog_frontend.mdx) have been updated to bring noticeable improvements in both advanced search performances and user experience across Data Catalog UI.  
+The latest services versions are reported [here](/data_catalog/compatibility_matrix.md).  
+
+#### Introduction of Fabric sync cronjob
+
+As reported in the Migration Guides paragraph of [Data Catalog Open Lineage](/data_catalog/data_catalog_open_lineage.mdx) service, when upgrading from `v0.1.0` to `v0.1.1`, it is necessary to configure the Fabric Sync cronjob, which is responsible to perform the synchronization between the collection of datasets imported by Data Catalog Agent and the collection of assets useful for Data Catalog application.
+
+For more information about how to configure and trigger the Fabric Sync, please follow the related documentation.
+
 ## Microfrontend Composer
 
 ### Back-Kit Library
