--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -40,6 +40,8 @@ We have strengthened our Platforge Extensibility Kit by adding the possibility t
 
 Customizing your Mia-Platform Console has never been so easy: simply select the type of extension, the desired Area and where to display it from the available options, then choose what you want to show your users!
 
+To discover more about how to manage your Extensions and the types of supported extensions, head to the [Extensions documentation](/console/company-configuration/extensions.md)
+
 ![Extension Manager](img/extension-manager.png)
 
 ### Extend Frontend of Mia-Platform Console with iFrames
