--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -50,6 +50,8 @@ The Mia-Platform Software Catalog offers a centralized solution for tracking, ma
 
 For more information and to see the currently supported resources, please refer to the [documentation](/software-catalog/overview.md) for detailed insights on the Software Catalog.
 
+![software catalog overview](img/software-catalog-overview.png)
+
 ### View version updates of Marketplace resources in your configuration
 
 From this release, you will be able to see, within your configuration, your Marketplace resources that have a new version update available.  
@@ -88,9 +90,8 @@ We’ve refreshed the look of the Flow Manager Configurator with updated graphic
 
 This version addressed the following bugs:
 
-* We fixed a bug where the Design configuration wasn't displayed correctly if saved via shortcut before fully loading
-* 
-* 
+* We fixed a bug where the Design configuration wasn't displayed correctly if saved via shortcut before fully loading;
+* The validation error message displayed when adding a new Public Variable has been fixed in its english translation
 
 ## Fast Data
 
