--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -91,7 +91,7 @@ We’ve refreshed the look of the Flow Manager Configurator with updated graphic
 This version addressed the following bugs:
 
 * We fixed a bug where the Design configuration wasn't displayed correctly if saved via shortcut before fully loading;
-* The validation error message displayed when adding a new Public Variable has been fixed in its english translation
+* The english translation of some validation error messages in Console has been revised
 
 ## Fast Data
 
