add some improvements to fall release docs

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -27,16 +27,14 @@ Console SaaS users can try out v13.3.0 - Fall Release latest improvements in Pre
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## Console
-
-### Support to all Infrastructure Resources in Design
+## Support to all Infrastructure Resources in Design
 
 With this release, we are excited to introduce the ability to manage infrastructure provisioning by configuring your Infrastructure Resources at the Design level.
 A new "Infrastructure" section has been added within the Design of your Console, fully dedicated to Infrastructure as Code!
 
 For more information, please visit the [documentation page](/console/design-your-projects/custom-resources/custom-resources.md) and explore some helpful [use cases](/console/design-your-projects/custom-resources/use-cases.md).
 
-### Support to Infrastructure Kubernetes Resources in the Runtime area 
+## Support to Infrastructure Kubernetes Resources in the Runtime area 
 
 With the v13.3.0 it is now possible to monitor directly in the Runtime area all the Custom Resources deployed for your project, on each environment on it.
 
@@ -44,7 +42,7 @@ For each resource you will be able to access its detail where you will see the r
 
 To discover more, please refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
 
-### Introducing the Mia-Platform Software Catalog
+## Introducing the Mia-Platform Software Catalog
 
 The Mia-Platform Software Catalog offers a centralized solution for tracking, managing, and documenting software resources across the company. It provides visibility into software ownership, metadata, lifecycle status, and versions, helping teams ensure accountability and avoid duplication of efforts.
 
@@ -52,39 +50,41 @@ For more information and to see the currently supported resources, please refer 
 
 ![software catalog overview](img/software-catalog-overview.png)
 
-### View version updates of Marketplace resources in your configuration
+## View version updates of Marketplace resources in your configuration
 
 From this release, you will be able to see, within your configuration, your Marketplace resources that have a new version update available.  
 This will allow you to be notified and keep your resources updated easily and frictionlessly!
 
 ![Marketplace Updates](img/marketplace-updates.png)
 
-### Add External Links in Console with the Extensibility manager
+## Add External Links in Console with the Extensibility manager
 
 We have enhanced our Platforge extensibility kit by adding external links among the supported extensions. You can now add this type of link in the sidebar from the Extension Manager in Console.
 
 For more information about Console Extensions, please visit the related [documentation page](/console/company-configuration/extensions.md).
 
-### Extend Mia-Platform Console pages using Microfrontend Composer | <Highlight color="#e5c762">BETA</Highlight>
+## Extend Mia-Platform Console pages using Microfrontend Composer <Highlight color="#e5c762">BETA</Highlight>
 
 With a view to further enhancing our Platforge toolkit dedicated to Console extensibility, we also introduced the possibility of composing Console pages using the Microfrontend Composer. 
 To do this, all you have to do is go to the Extensions manager at Company level, add an extension by selecting the ‘Create with Composer’ option and start customizing the new section you want to add!
 
 Please note that this feature has now been released in Beta. To discover more, refer to the [Extensions documentation](/console/company-configuration/extensions.md).
 
-### Support for Repository Creation in Infrastructure Resources
+## Support for Repository Creation in Infrastructure Resources
 
 For Infrastructure Resources that have an associated repository defined in their template, the Console now fully supports the repository creation step.
 
+## Console
+
 ### Improvements
+
+#### New Flow Manager Configurator look
+
+We have refreshed the look of the Flow Manager Configurator with updated graphics, new colors, and several design improvements to enhance the overall user experience and visual appeal.
 
 #### Annotations & Labels Suggestions
 
 The Console now suggests previously used Annotations & Labels when adding them to a Microservice, speeding up the process and reducing the chance of errors.
-
-#### New Flow Manager Configurator look
-
-We’ve refreshed the look of the Flow Manager Configurator with updated graphics, new colors, and several design improvements to enhance the overall user experience and visual appeal.
 
 ### Bug Fix
 
@@ -94,8 +94,6 @@ This version addressed the following bugs:
 * The validation error message displayed when adding a new Public Variable has been fixed in its english translation
 
 ## Fast Data
-
-### Fast Data Configurator
 
 ### Fast Data Services
 
