--- a/docs/release-notes/mia-platform-v13.mdx
+++ b/docs/release-notes/mia-platform-v13.mdx
@@ -40,7 +40,7 @@ We have strengthened our Platforge Extensibility Kit by adding the possibility t
 
 Customizing your Mia-Platform Console has never been so easy: simply select the type of extension, the desired Area and where to display it from the available options, then choose what you want to show your users!
 
-To discover more about how to manage your Extensions and the types of supported extensions, head to the [Extensions documentation](/console/company-configuration/extensions.md)
+To discover more about how to manage your Extensions and the types of supported extensions, head to the [Extensions documentation](/console/company-configuration/extensions.md).
 
 ![Extension Manager](img/extension-manager.png)
 
@@ -78,7 +78,7 @@ You can find the brand new plugin in the [Backstage Marketplace](https://backsta
 
 ## Infrastructure Management
 
-### Manage Infrastructure Resources through Console
+### Manage Infrastructure Resources through Console 
 
 You can now manage and configure custom objects that are not part of the standard Console supported resources using the classic user interface of the Console. This feature further expands the Console domain over user's entire workloads, enabling greater operability, governance, and control over systems.
 
@@ -86,7 +86,7 @@ You can now manage and configure custom objects that are not part of the standar
 
 #### Support to all Infrastructure Resources | <Highlight color="#1890FF">v13 - Fall Release</Highlight>
 
-With this Fall release we have officially introduced the possibility to manage the provisioning of your infrastructure, configuring - at the Design level - your Infrastructure Resources.  
+With the Fall release updates we have officially introduced the possibility to manage the provisioning of your infrastructure, configuring - at the Design level - your Infrastructure Resources.  
 Within the Design of your Console you can then see a new "Infrastructure" section entirely dedicated to Infrastructure as Code! 
 
 To discover more, please refer to the [documentation page](/console/design-your-projects/custom-resources/custom-resources.md) and check out some useful [use cases](/console/design-your-projects/custom-resources/use-cases.md).
