add cr in runtime img

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -40,6 +40,8 @@ With the v13.3.0 it is now possible to monitor directly in the Runtime area all 
 
 For each resource you will be able to access its detail where you will see the respective Describe and Events that are generated, similarly to the other resources in the Runtime Area.
 
+![runtime custom resources](img/runtime-custom-resources.png)
+
 To discover more, please refer to the [documentation](/console/design-your-projects/custom-resources/custom-resources.md).
 
 ## Introducing the Mia-Platform Software Catalog
