--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -50,7 +50,7 @@ The Mia-Platform Software Catalog offers a centralized solution for tracking, ma
 
 For more information and to see the currently supported resources, please refer to the [documentation](/software-catalog/overview.md) for detailed insights on the Software Catalog.
 
-![software catalog overview](img/software-catalog-overview.png)
+![software catalog overview](img/software-catalog.png)
 
 ## View version updates of Marketplace resources in your configuration
 
