--- a/docs/console/company-configuration/events.mdx
+++ b/docs/console/company-configuration/events.mdx
@@ -99,7 +99,7 @@ This event will be triggered when a Project is created successfully.
 </TabItem>
 <TabItem value='create-project-project_field' label='Project JSON Schema'>
 
-:::cautio
+:::caution
 The following schema is potentially non-exhaustive and may not cover all the possible properties of a Project resource.
 :::
 
