RN 13.3.0 in Prod

--- a/docs/release-notes/v13.3.0.md
+++ b/docs/release-notes/v13.3.0.md
@@ -17,15 +17,7 @@ export const Highlight = ({children, color}) => (
   </span>
 );
 
-_October 24th, 2024_
-
-:::info
-Mia-Platform Console v13.3.0 - Fall Release is **now in Preview** and will be generally available on November 21st.
-
-Console SaaS users can try out v13.3.0 - Fall Release latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_November 18th, 2024_
 
 ## Support to all Infrastructure Resources in Design
 
@@ -167,5 +159,5 @@ In this minor version, we’ve added a new feature to the `FormModal` component.
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.5-beta.1`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.5`.
 
