--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -7,7 +7,6 @@ image: "img/release-note-link-preview.png"
 
 _November 21th, 2024_
 
-
 ## Console
 
 ### Improvements
@@ -24,8 +23,6 @@ This version addressed the following bugs:
 
 ## Data Catalog
 
-
-
 ## Microfrontend Composer
 
 #### Improvements
@@ -37,5 +34,5 @@ This version addressed the following bugs:
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v13.7.5`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
 
