Added Preview Banner

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -7,6 +7,14 @@ image: "img/release-note-link-preview.png"
 
 _November 21th, 2024_
 
+:::info
+Mia-Platform Console v13.4.0 - Fall Release is **now in Preview** and will be generally available on December 5th.
+
+Console SaaS users can try out v13.4.0 - Fall Release latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
+
+For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
+:::
+
 ## Console
 
 ### Improvements
