add composability rn

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -15,6 +15,12 @@ Console SaaS users can try out v13.4.0 - Fall Release latest improvements in Pre
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
+## Improved Resource Management in the Software Catalog
+
+In this release, we’ve enhanced the Software Catalog with new features to improve resource management. Users can now create new items, as well as create new versions for items that support versioning. Additionally, we’ve introduced the ability to delete both individual items and their versions, offering more flexibility in managing resources within the catalog. 
+
+For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/overview.md).
+
 ## Console
 
 ### Improvements
@@ -33,8 +39,22 @@ This version addressed the following bugs:
 
 ## Microfrontend Composer
 
+### Back-Kit Library
+
+The new version `v1.5.10` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
 #### Improvements
 
+##### New format for dates
+
+By specifying `format: date` or `format: time` and adding the flag `isPartialFormat` to true in `formOptions` it is now possible to use dates and time as simple strings and not ISO format.
+
+#### Bug Fix
+
+- Fixed query for writable views' lookup
+- fixed typo in italian label on export/import delimiter option
 
 ## Marketplace
 
