Add Mia Care marketplace updates

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -60,6 +60,59 @@ By specifying `format: date` or `format: time` and adding the flag `isPartialFor
 
 ### Marketplace Updates
 
+#### Audit Trail
+
+The first version of the Audit Trail sidecar is available now!
+
+This sidecar allows you to collect audit logs from your microservice through a shared log file and sends them to Kafka after being processed and enriched with metadata.
+
+Check the sidecar documentation for additional information about architecture, configuration and usage.
+
+#### Care Kit
+
+A new version `2.9.1` of Care Kit is out!
+
+The new version includes upgrade to Node.js (now using v20) and several dependencies, plus some fixes to the existing components `ck-threshold-modal` and `add-plan-modal`. The first version of a new component `roles-and-permissions-modal` to manage roles and permissions is also introduced. 
+
+#### FHIR Adapter
+
+A new patch version `1.0.4` of the FHIR Adapter is out!
+
+This version includes important updates to Node.js (now using v20) and its dependencies.
+
+#### Form Service
+
+A new minor version `2.1.0` of the Form Service Frontend is out!
+
+This version introduces the ability to customize the title of the expired modal, plus brings important upgrades to its dependencies.
+
+#### Messaging Service
+
+The new version `1.7.1` of the Messaging Service is out!
+
+In this release we replace automatically newline escape sequences (`\n`, `\n\r`, `\r` and `\r\n`) with  the `<br/>` tag in HTML email messages.
+
+#### Notification Manager
+
+The new version `2.4.1` of the Notification Manager is out!
+
+This version introduces a streamlined way to display all the notification messages sent on a Backoffice page. By leveraging a MongoDB view, all the most common Backoffice features and components (table, filters and pagination) are supported out of the box.
+
+Also, a bug has been fixed that caused notification settings to be not merged correctly when the `rule` field was not set.
+
+#### Teleconsultation Service
+
+The new version `2.0.1` of the Teleconsultation Service - both Backend and Frontend - is out!
+
+This patch version includes improvements and fixes to the documentation, default security policies and UI copies.
+
+#### Therapy and Monitoring Manager
+
+The new version `0.5.1` of the Therapy and Monitoring Manager is out!
+
+This minor version brings some dependency updates, plus some fixes and improvements in the integrated threshold validation, in particular now the validation results are stored alongside the detection.
+Also, a new `values` field is available in the prototypes to map a human-readable name of a detection property to the object path where the corresponding value is stored, such allowing to have nested or array fields in the detection schema while keeping a more human-friendly property name to display to the user.
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `x.x.x`.
