--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -21,9 +21,24 @@ In this release, we’ve enhanced the Software Catalog with new features to impr
 
 For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/overview.md).
 
+## Create versions for your Microservice Templates & Examples
+TO DO
+
+## Configuration Saved webhook
+TO DO: fired when the configuration for a Project is saved
+
+## Specificy the Rate limit for Endpoints' subroutes
+TO DO
+
 ## Console
 
 ### Improvements
+
+#### Changes to Extensions are shown immediately in the Console sidebar
+TO DO
+
+#### Identities search case insensitive
+TO DO: (Users, Service Accounts, Groups in the Access Management section)
 
 ### Bug Fix
 
@@ -112,6 +127,14 @@ The new version `0.5.1` of the Therapy and Monitoring Manager is out!
 
 This minor version brings some dependency updates, plus some fixes and improvements in the integrated threshold validation, in particular now the validation results are stored alongside the detection.
 Also, a new `values` field is available in the prototypes to map a human-readable name of a detection property to the object path where the corresponding value is stored, such allowing to have nested or array fields in the detection schema while keeping a more human-friendly property name to display to the user.
+
+#### Auth0 Client - 3.7.1
+
+This patch includes a fix to logout redirect when query parameters are set in the redirect path.
+
+#### Auth0 Client - 3.7.0
+
+The version `3.7.0` of the Auth0 Client is now available, adding the support for TLS connections with Redis.
 
 ## How to update your Console
 
