added composer updates

--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -21,6 +21,8 @@ In this release, we’ve enhanced the Software Catalog with new features to impr
 
 For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/overview.md).
 
+![software catalog add item](img/software-catalog-add-item.png)
+
 ## Create versions for your Microservice Templates & Examples
 TO DO
 
@@ -66,6 +68,14 @@ For more information check out the service [changelog](/runtime_suite/projection
 ## Data Catalog
 
 ## Microfrontend Composer
+
+### Configurator
+
+#### Improvements
+
+##### Support for compose page options configuration
+
+From the applications modal it is now possible to configure the [`fetchConfigOnMount option`](https://micro-lc.io/docs/guides/applications/compose#fetchconfigonmount) to instruct micro-lc to retrieve the application configuration at each mount.
 
 ### Back-Kit Library
 
