--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -15,7 +15,8 @@ Console SaaS users can try out v13.4.0 - Fall Release latest improvements in Pre
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## Improved Resource Management in the Software Catalog
+## Manage your resources from Mia-Platform Software Catalog
+
 
 In this release, we’ve enhanced the Software Catalog with new features to improve resource management. Users can now create new items, as well as create new versions for items that support versioning. Additionally, we’ve introduced the ability to delete both individual items and their versions, offering more flexibility in managing resources within the catalog. 
 
