--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -18,7 +18,8 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 ## Manage your resources from Mia-Platform Software Catalog
 
 
-In this release, we’ve enhanced the Software Catalog with new features to improve resource management. Users can now create new items, as well as create new versions for items that support versioning. Additionally, we’ve introduced the ability to delete both individual items and their versions, offering more flexibility in managing resources within the catalog. 
+In this release, we’ve enhanced the Software Catalog section with new features to improve resource management. Users can now create new items, as well as create new versions for items that support versioning, directly from the Console UI. Additionally, we’ve introduced the possibility to delete both individual items and their versions, offering more flexibility in managing resources within the Catalog. 
+
 
 For more details, please refer to [the documentation](/software-catalog/manage-items/software-catalog-ui/overview.md).
 
