--- a/docs/release-notes/v13.4.0.md
+++ b/docs/release-notes/v13.4.0.md
@@ -38,6 +38,10 @@ TO DO
 
 ### Improvements
 
+#### Monitoring of the Infrastructure Resources created from scratch
+
+It is now possible, using the dedicated interface in the Design area, to define the parameters required to monitor an infrastructure resource created from scratch from the runtime area.
+
 #### Changes to Extensions are shown immediately in the Console sidebar
 TO DO
 
@@ -48,7 +52,10 @@ TO DO: (Users, Service Accounts, Groups in the Access Management section)
 
 This version addressed the following bugs:
 
-* 
+* fixed a bug that made it impossible to change the type of a microservice environment variable from ‘Downward API’ to ‘Plain’;
+* fixed a bug that made impossible to create a template without Kustomize
+* fixed a bug that caused a wrong display of a company's cluster list has been corrected;
+* fixed an issue that caused infinite loading on refresh of the History section in the Deploy area.
 
 ## Fast Data
 
